# db-connect-v2-image-classification

./: .gitignore  README.md  pyproject.toml
conf/: config.yaml
db_connect_v2_image_classification/: configs.py  create_table.py  css_utils.py  main_wrapper.py
db_connect_v2_image_classification/frontend/: app.py  callbacks.py  components.py  crud.py
db_connect_v2_image_classification/frontend/assets/: custom.css
